# sabre

./: .README.md.swp  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW_FINDINGS.md  Dockerfile  README.md  file_io_plan.md  parse_paths_plan.md  pyproject.toml
.github/workflows/: deploy-server.yml  deploy-ui.yml
benchmarks/: README.md
benchmarks/DataSciBench/: README.md  run_benchmark.py  setup_benchmark.py
benchmarks/harbor/: README.md  pyproject.toml  run_benchmark.py  setup_benchmark.py  view_job.py
benchmarks/harbor-terminal-bench/: README.md  run_benchmark.sh  setup_benchmark.py
benchmarks/k8s-ai-bench/: README.md  analyze_results.sh  run_benchmark.sh  setup_benchmark.py
docs/: AWS_DEPLOYMENT.md  orchestrator-refactor.md
examples/: openai_client_example.py  test_openai_endpoints.py
plans/: CLAUDE.md  EVAL_PLAN.md  MCP_INTEGRATION_PLAN.md  MEMORY_PLAN.md  MODE_PLAN.md  PERSONA_ITERATION_PLAN.md  PERSONA_PLAN.md  TAU2_BENCH_INTEGRATION_PLAN.md  VARIANTS_ARCHITECTURE.md  XDG_COMPLIANCE_PLAN.md  personas_with_progressive_disclosure.md
sabre/: cli.py  openai_client.py  sdk.py
sabre/client/: __main__.py  client.py  file_loader.py  tui.py
sabre/common/: __init__.py  execution_context.py  paths.py
sabre/eval/: README.md  __init__.py  datascibench.py
sabre/server/: __main__.py  atif_export.py  conversation_logger.py  orchestrator.py  python_runtime.py  session_logger.py  streaming_parser.py
tests/: README.md  __init__.py  colors_test.py  conftest.py  run_sse_test.sh  run_wezterm_pty_test.sh  sse_test_client.py  sse_test_server.py  test_ask_user_endpoint.py  test_ask_user_events.py  test_ask_user_helper.py  test_ask_user_integration.py  test_atif_export.py  test_bash_improvements.py  test_browser_integration.py  test_client.py  test_connector_api_integration.py  test_connector_bootstrap_integration.py  test_connector_e2e_workflow.py  test_connector_manager_integration.py  test_connector_store.py  test_executor.py  test_file_io.py  test_file_loader.py  test_fix.py  test_instructions.py  test_llm_call_async.py  test_mcp_client.py  test_mcp_client_manager.py  test_mcp_config.py  test_mcp_helper_adapter.py  test_mcp_integration.py  test_mcp_models.py  test_mcp_runtime_execution.py  test_mcp_thread_safety.py  test_orchestrator.py  test_python_runtime.py  test_script_mode.py  test_system_prompt.py  test_terminal_detection_suite.py  (+1 more)
ui/: amplify.yml  package-lock.json  package.json
(+98 files in other folders)
